--- a/src/main/resources/templates/AdministrarPubli.html
+++ b/src/main/resources/templates/AdministrarPubli.html
@@ -227,7 +227,7 @@
 											<div class="card text-center">
 												<td>
 													<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-														class="bd-placeholder-img rounded img-fluid" />
+														class="bd-placeholder-img rounded img-fluid">
 												</td>
 												<td>
 													<p scope="row" th:text="${Publicacion.tipoLugar}"></p>
