--- a/src/main/resources/static/css/sb-admin-2.css
+++ b/src/main/resources/static/css/sb-admin-2.css
@@ -287,7 +287,7 @@ button,
 [type="button"],
 [type="reset"],
 [type="submit"] {
-	-webkit-appearance: button;
+	appearance: -webkit-appearance button;
 }
 
 button:not(:disabled),
@@ -346,11 +346,11 @@ progress {
 
 [type="search"] {
 	outline-offset: -2px;
-	-webkit-appearance: none;
+	appearance: -webkit-appearance none;
 }
 
 [type="search"]::-webkit-search-decoration {
-	-webkit-appearance: none;
+	appearance: apa-webkit-appearance none;
 }
 
 ::-webkit-file-upload-button {
