--- a/src/main/resources/templates/casas.html
+++ b/src/main/resources/templates/casas.html
@@ -279,41 +279,35 @@
 												<td>
 													<div class="card-body">
 														<div class="card text-center">
-
-															<div id="carouselExampleFade"
-																class="carousel slide carousel-fade"
-																data-bs-ride="carousel">
-																<div class="carousel-inner">
-																	<div class="carousel-item active">
-																		<img th:src="@{/imagenes/}+${Publicacion.Imagen}"
-																			class="bd-placeholder-img rounded img-fluid d-block w-100">
-																	</div>
-																	<div class="carousel-item">
-																		<img th:src="@{/imagenes/}+'2-'+${Publicacion.Imagen}"
-																			class="bd-placeholder-img rounded img-fluid d-block w-100">
-																	</div>
-																	<div class="carousel-item">
-																		<img th:src="@{/imagenes/}+'3-'+${Publicacion.Imagen}"
-																			class="bd-placeholder-img rounded img-fluid d-block w-100">
-																	</div>
-																	<div class="carousel-item">
-																		<img th:src="@{/imagenes/}+'4-'+${Publicacion.Imagen}"
-																			class="bd-placeholder-img rounded img-fluid d-block w-100">
-																	</div>
-																</div>
-																<button class="carousel-control-prev" type="button"
-																	data-bs-target="#carouselExampleFade"
-																	data-bs-slide="prev">
-																	<span class="carousel-control-prev-icon"
-																		aria-hidden="true"></span>
-																</button>
-																<button class="carousel-control-next" type="button"
-																	data-bs-target="#carouselExampleFade"
-																	data-bs-slide="next">
-																	<span class="carousel-control-next-icon"
-																		aria-hidden="true"></span>
-																</button>
+													
+																													
+															<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+															  <div class="carousel-inner">
+															    <div class="carousel-item active">
+															      <img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																			class="d-block w-100" alt="primera imagen">
+															    </div>
+															    <div class="carousel-item">
+															         <img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																			class="d-block w-100" alt="Segunda imagen">
+															    </div>
+															    <div class="carousel-item">
+															         <img th:src="@{/imagenes/}+${Publicacion.Imagen}"
+																			class="d-block w-100" alt="Tercer imagen">
+															    </div>
+															  </div>
+															  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+															    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+															    <span class="sr-only">Previous</span>
+															  </a>
+															  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+															    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+															    <span class="sr-only">Next</span>
+															  </a>
 															</div>
+															
+															
+															
 												</td>
 												<td>
 
