--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Index</title>
+	<title>Secciones</title>
 
 	<!-- Custom fonts for this template-->
 	<link th:href="@{/vendor/fontawesome-free/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -106,14 +106,14 @@
 			<!-- Nav Item - Charts -->
 			<li class="nav-item">
 				<a class="nav-link" th:href="@{/login}">
-					<i class="fas fa fa-user-circle fa-2x text-gray-2"></i>
+					<i class="fas fa fa-user-circle fa-4x text-gray-2"></i>
 					<span>MI CUENTA</span></a>
 			</li>
 
 			<!-- Nav Item - Tables -->
 			<li class="nav-item">
 				<a class="nav-link" th:href="@{/AdministrarPrincipal}">
-					<i class="fas fa-fw fa-table fa-2x text-gray-2"></i>
+					<i class="fas fa-fw fa-table"></i>
 					<span>PUBLICACIONES</span></a>
 			</li>
 
@@ -143,37 +143,16 @@
 						<i class="fa fa-bars"></i>
 					</button>
 
-					<!-- Topbar Search-->
-					<form
-						class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-						<div class="input-group">
-							<input type="text" name="palabraClave" class="form-control bg-light border-0 small"
-								id="palabraClave" th:value="${palabraClave}" placeholder="BUSCAR" aria-label="Search"
-								aria-describedby="basic-addon2" required>
-							<div class="input-group-append">
-								<button class="btn btn-primary" type="submit">
-									&nbsp; &nbsp;
-									<i class="fas fa-search fa-sm"></i>
-								</button>
-							</div>
-						</div>
-					</form>
+					<!-- Topbar Navbar -->
+					<ul class="navbar-nav ml-auto">
 
-					<!-- Nav Item - User Information -->
-					<li class="nav-item dropdown no-arrow">
-						<a th:href="@{/login}">
-							<button type="button" class="btn btn-outline-primary">INGRESAR</button>
-						</a>
-						<!-- Topbar Navbar -->
-						<ul class="navbar-nav ml-auto">
-
-							<!-- Nav Item - Search Dropdown (Visible Only XS) 
+						<!-- Nav Item - Search Dropdown (Visible Only XS) -->
 						<li class="nav-item dropdown no-arrow d-sm-none">
 							<a class="nav-link dropdown-toggle" href="#" id="searchDropdown" role="button"
 								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="fas fa-search fa-fw"></i>
-							</a>-->
-							<!-- Dropdown - Messages 
+							</a>
+							<!-- Dropdown - Messages -->
 							<div class="dropdown-menu dropdown-menu-right p-3 shadow animated--grow-in"
 								aria-labelledby="searchDropdown">
 								<form class="form-inline mr-auto w-100 navbar-search">
@@ -189,8 +168,9 @@
 									</div>
 								</form>
 
-							</div>-->
-
+							</div>
+						</li>
+					</ul>
 				</nav>
 				<!-- End of Topbar -->
 
@@ -240,6 +220,35 @@
 							</div>
 						</div>
 
+						<!-- Earnings (Monthly) Card Example -->
+						<div class="col-xl-3 col-md-6 mb-4">
+							<div class="card border-left-info shadow h-100 py-2">
+								<div class="card-body">
+									<div class="row no-gutters align-items-center">
+										<div class="col mr-2">
+											<div class="text-xl font-weight-bold text-info text-uppercase mb-1">
+												DISPONIBLES
+											</div>
+											<div class="row no-gutters align-items-center">
+												<div class="col-auto">
+													<div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">50%</div>
+												</div>
+												<div class="col">
+													<div class="progress progress-sm mr-2">
+														<div class="progress-bar bg-info" role="progressbar"
+															style="width: 50%" aria-valuenow="50" aria-valuemin="0"
+															aria-valuemax="100"></div>
+													</div>
+												</div>
+											</div>
+										</div>
+										<div class="col-auto">
+											<i class="fas fa-clipboard-list fa-3x text-gray-300"></i>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 
 						<!-- Pending Requests Card Example -->
 						<div class="col-xl-3 col-md-6 mb-4">
@@ -248,10 +257,10 @@
 									<div class="row no-gutters align-items-center">
 										<div class="col mr-2">
 											<div class="text-xl font-weight-bold text-warning text-uppercase mb-1">
-												SECCIONES</div>
+												CREAR PUBLICACIÓN</div>
 										</div>
 										<div class="col-auto">
-											<a th:href="@{/secciones}">
+											<a th:href="@{/PublicControlador/FormuCrearpublic}">
 												<i class="fas fa-comments fa-4x text-gray-300"></i>
 											</a>
 										</div>
@@ -261,44 +270,151 @@
 						</div>
 					</div>
 
-					<!--Footer-->
-					<footer class="sticky-footer bg-white">
-						<div class="container my-auto">
-							<div class="copyright text-center my-auto">
-								<span>Copyright; MR 2023</span>
+					<div class="row">
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">CASAS</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/casa.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
 							</div>
 						</div>
-					</footer>
-					<!-- End of Footer -->
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">HABITACIONES</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/habitacion.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/habitaciones}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">APARTAMENTOS</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/apartamento.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">LOTES</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/lote.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">TERRENOS</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/terreno.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">FINCAS</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/finca.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">LOCALES</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/local.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">OFICINAS</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/oficina.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-6">
+							<div class="card-header py-3">
+								<h6 class="m-0 font-weight-bold text-primary">EDIFICIOS</h6>
+							</div>
+							<div class="row">
+								<div class="container">
+									<div class="text-center">
+										<img th:src="@{/secciones/edificio.jpg}" class="img-thumbnail">
+									</div>
+									<a th:href="@{/casas}">CONOCER MÁS...</a>
+								</div>
+							</div>
+						</div>
+
+						<!--div containers-->
+					</div>
+
 				</div>
-				<!-- End of Content Wrapper -->
+
 			</div>
-			<!-- End of Page Wrapper -->
-			<!-- Scroll to Top Button-->
-			<a class="scroll-to-top rounded" href="#page-top">
-				<i class="fas fa-angle-up"></i>
-			</a>
-			<!-- Logout Modal-->
-			<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-				aria-hidden="true">
-				<div class="modal-dialog" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-							<button class="close" type="button" data-dismiss="modal" aria-label="Close">
-								<span aria-hidden="true">×</span>
-							</button>
-						</div>
-						<div class="modal-body">Select "Logout" below if you are ready to end your
-							current session.
-						</div>
-						<div class="modal-footer">
-							<button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-							<a class="btn btn-primary" href="login.html">Logout</a>
-						</div>
+
+
+			<!-- Footer -->
+			<footer class="sticky-footer bg-white">
+				<div class="container my-auto">
+					<div class="copyright text-center my-auto">
+						<span>Copyright; MR 2023</span>
 					</div>
 				</div>
-			</div>
+			</footer>
+			<!-- End of Footer -->
 
 			<!-- Bootstrap core JavaScript-->
 			<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
